--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jacob Enerio",
@@ -12,13 +12,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.8.0",
     "vm2": "^3.9.13"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
   },
-  "engines" : {
-    "node" : "16.x"
+  "engines": {
+    "node": "16.x"
   }
 }
